# src/routes/auth/AuthRoutes.ts
@@ -3,6 +3,7 @@ import AuthService from './AuthService';
 import AuthValidations from './AuthValidations';
 import { verifyToken } from '../../utils/auth';
 import { validate } from '../../utils/validations';
+import { upload } from '../../middlewares/upload';
 
 const router = Router();
 
@@ -31,6 +32,12 @@ router.get('/log-out', verifyToken(), AuthService.logout as RequestHandler);
 router.delete('/delete-account', verifyToken(), AuthService.deleteMyAccount as RequestHandler);
 
 router.get('/get-profile', verifyToken(), AuthService.getProfile as RequestHandler);
+router.put(
+    '/update-profile',
+    verifyToken(),
+    validate(AuthValidations.updateProfile),
+    AuthService.updateProfile as RequestHandler
+);
 
 router.put(
     '/change-password',
@@ -41,9 +48,11 @@ router.put(
 
 router.post('/reset-password', validate(AuthValidations.resetPassword), AuthService.resetPassword as RequestHandler);
 
-// router.post('/google-login', validate(AuthValidations.googleLogin), AuthService.googleLogin as RequestHandler);
+router.post('/google-login', validate(AuthValidations.googleLogin), AuthService.googleLogin as RequestHandler);
 
 // router.get('/google', AuthService.googleAuthUrl.bind(AuthService) as RequestHandler);
 // router.get('/google/callback', AuthService.googleCallback.bind(AuthService) as RequestHandler);
+
+router.post('/analyze-prescription', upload.single('image'), AuthService.analyzePrescription as RequestHandler);
 
 export { router };
